--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,8 @@ jobs:
         with:
           # Without this the fetch depth defaults to 1, which only includes the most recent commit. We want to know the full history so that `git describe` can give more information when it is invoked in the orderbook's crate build script.
           fetch-depth: '0'
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2.0.0
       - uses: docker/login-action@v1
         with:
           registry: ghcr.io
