--- a/docker/Dockerfile.binary
+++ b/docker/Dockerfile.binary
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1.4
 FROM docker.io/rust:1-slim-bullseye as cargo-build
 WORKDIR /src/
 
@@ -6,7 +7,7 @@ RUN apt-get update && apt-get install -y git libssl-dev pkg-config
 
 # Copy and Build Code
 COPY . .
-RUN CARGO_PROFILE_RELEASE_DEBUG=1 --mount=type=cache,target=/usr/local/cargo/registry --mount=type=cache,target=/root/target cargo build --release
+RUN --mount=type=cache,target=/usr/local/cargo/registry --mount=type=cache,target=/root/target CARGO_PROFILE_RELEASE_DEBUG=1 cargo build --release
 
 # Extract Binary
 FROM docker.io/debian:bullseye-slim
