--- a/docker/Dockerfile.binary
+++ b/docker/Dockerfile.binary
@@ -1,27 +1,27 @@
-# syntax=docker/dockerfile:1.4
-FROM rust:1.61.0 as cargo-build
-WORKDIR /root
+FROM lukemathwalker/cargo-chef:latest-rust-1.59.0 AS chef
+WORKDIR app
 
-RUN --mount=type=cache,target=/usr/local/cargo/registry \
-    cargo install cargo-strip
-
-# Copy and Build Code
+FROM chef AS planner
 COPY . .
-RUN --mount=type=cache,target=/usr/local/cargo/registry --mount=type=cache,target=/root/target \
-    cargo build --release && \
-    cargo strip
+RUN cargo chef prepare --recipe-path recipe.json
 
-# Extract Binary
-FROM docker.io/debian:bullseye-slim
+FROM chef AS builder 
+COPY --from=planner /app/recipe.json recipe.json
+# Build dependencies - this is the caching Docker layer!
+RUN cargo chef cook --release --recipe-path recipe.json
+# Build application
+COPY . .
+RUN cargo build --release
 
-# Handle signal handlers properly
-COPY --from=cargo-build /root/target/release/alerter /usr/local/bin/alerter
-COPY --from=cargo-build /root/target/release/autopilot /usr/local/bin/autopilot
-COPY --from=cargo-build /root/target/release/driver /usr/local/bin/driver
-COPY --from=cargo-build /root/target/release/orderbook /usr/local/bin/orderbook
-COPY --from=cargo-build /root/target/release/refunder /usr/local/bin/refunder
-COPY --from=cargo-build /root/target/release/solver /usr/local/bin/solver
-COPY --from=cargo-build /root/target/release/solvers /usr/local/bin/solvers
+FROM debian:bullseye-slim AS runtime
+WORKDIR app
+COPY --from=builder /app/target/release/alerter /usr/local/bin/alerter
+COPY --from=builder /app/target/release/autopilot /usr/local/bin/autopilot
+COPY --from=builder /app/target/release/driver /usr/local/bin/driver
+COPY --from=builder /app/target/release/orderbook /usr/local/bin/orderbook
+COPY --from=builder /app/target/release/refunder /usr/local/bin/refunder
+COPY --from=builder /app/target/release/solver /usr/local/bin/solver
+COPY --from=builder /app/target/release/solvers /usr/local/bin/solvers
 
 CMD echo "Specify binary..."
 ENTRYPOINT ["/usr/bin/tini", "--"]
