--- a/docker/Dockerfile.binary
+++ b/docker/Dockerfile.binary
@@ -1,5 +1,5 @@
-FROM lukemathwalker/cargo-chef:latest-rust-1.59.0 AS chef
-WORKDIR app
+FROM lukemathwalker/cargo-chef:latest-rust-1 AS chef
+WORKDIR /app
 
 FROM chef AS planner
 COPY . .
@@ -14,7 +14,7 @@ COPY . .
 RUN cargo build --release
 
 FROM debian:bullseye-slim AS runtime
-WORKDIR app
+WORKDIR /app
 COPY --from=builder /app/target/release/alerter /usr/local/bin/alerter
 COPY --from=builder /app/target/release/autopilot /usr/local/bin/autopilot
 COPY --from=builder /app/target/release/driver /usr/local/bin/driver
