include release debug

--- a/docker/Dockerfile.binary
+++ b/docker/Dockerfile.binary
@@ -11,7 +11,7 @@ COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json
 # Build application
 COPY . .
-RUN cargo build --release
+RUN CARGO_PROFILE_RELEASE_DEBUG=1 cargo build --release
 
 FROM debian:bullseye-slim AS runtime
 WORKDIR /app
