--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,6 @@ tracing-subscriber = "0.3"
 url = "2"
 warp = { git = 'https://github.com/vkgnosis/warp.git', rev = "87a91e2", default-features = false }
 web3 = { version = "0.19", default-features = false }
+
+[profile.release]
+debug = true
